[Bug Fixed]: The dropdown in custom logic definition made visibe (#5717)
* [Bug Fixed]: The dropdown is made aways visible

* suggested changes done

---------

--- a/phytoplankton-console/src/components/ui/LogicBuilder/index.module.less
+++ b/phytoplankton-console/src/components/ui/LogicBuilder/index.module.less
@@ -127,11 +127,6 @@
     .rule--field-wrapper,
     .rule--widget {
       display: flex;
-      &:hover {
-        svg {
-          opacity: 1;
-        }
-      }
     }
 
     .rule--field {
@@ -304,7 +299,7 @@
 
 .selectedValueSource {
   .arrowIcon {
-    opacity: 0;
+    opacity: 1;
     width: 24px;
     color: @fr-colors-v2-gray-6;
   }
